// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatastreamDublinCoreAddButtons renders with appropriate parent details (using full storage) 1`] = `
<DocumentFragment>
  <h3>
    Add Blank Field:
  </h3>
  <button />
  <button />
  <h3>
    Clone Metadata:
  </h3>
  PidPicker: {"selected":"","parents":[{"pid":"parent:123","title":"Parent"}]}
</DocumentFragment>
`;

exports[`DatastreamDublinCoreAddButtons renders with appropriate parent details (using shallow storage) 1`] = `
<DocumentFragment>
  <h3>
    Add Blank Field:
  </h3>
  <button />
  <button />
  <h3>
    Clone Metadata:
  </h3>
  PidPicker: {"selected":"","parents":[{"pid":"parent:123","title":"Parent"}]}
</DocumentFragment>
`;

exports[`DatastreamDublinCoreAddButtons renders with selected clone pid 1`] = `
<DocumentFragment>
  <h3>
    Add Blank Field:
  </h3>
  <button />
  <button />
  <h3>
    Clone Metadata:
  </h3>
  PidPicker: {"selected":"foo","parents":[]}
  <button>
    Clone
  </button>
</DocumentFragment>
`;

exports[`DatastreamDublinCoreAddButtons renders without selected clone pid 1`] = `
<DocumentFragment>
  <h3>
    Add Blank Field:
  </h3>
  <button />
  <button />
  <h3>
    Clone Metadata:
  </h3>
  PidPicker: {"selected":"","parents":[]}
</DocumentFragment>
`;
